# pr-archaeologist

./: .gitignore  README.md  pyproject.toml
.pr-arch/: memory.db
scripts/: inspect_db.py  inspect_db_2.py  seed_demo.py
src/pr_arch/: .env  __main__.py  cli.py  config.py
src/pr_arch/agent/: loop.py  prompts.py  tools.py
src/pr_arch/db/: connection.py
src/pr_arch/extract/: prompts.py  runner.py  schema.py
src/pr_arch/index/: embed.py  graph.py  schema.py
src/pr_arch/index/migrations/: 001_init.sql
src/pr_arch/ingest/: github.py  runner.py  store.py  watermark.py
src/pr_arch/llm/: anthropic.py  openai.py
