[project]
name = "pr-arch"
version = "0.1.0"
description = "A CLI agent that builds a living memory of a repo's decision history"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic-settings>=2.14.1",
    "sqlite-vec>=0.1.9",
    "anthropic>=0.102.0",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
]

[project.scripts]
pr-arch = "pr_arch.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
